--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Víctor Elvira's personal webpage
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://victorelvira.github.com/'
 
 ############################
 ## LANGUAGE
